--- a/core/src/components/button/med/med-button-icon-only.scss
+++ b/core/src/components/button/med/med-button-icon-only.scss
@@ -1,5 +1,9 @@
 :host([icon-only]) {
   --background: transparent;
+  --background-hover: #{$med-color-neutral-dark-40-rgb};
+  --background-hover-opacity: #{$med-opacity-level-half};
+  --background-focused: #{$med-color-neutral-dark-40-rgb};
+  --background-focused-opacity: #{$med-opacity-level-half};
 
   --border-radius: #{$med-border-radius-pill};
   --border-width: #{$med-border-width-thin};
@@ -11,8 +15,8 @@
 
   --fill: #{$med-color-neutral-light-prime};
 
-  --button-ripple-color: #{$med-color-brand-primary-dark};
-  --button-ripple-opacity: #{$med-opacity-level-light};
+  --button-ripple-color: #{$med-color-neutral-dark-40};
+  --button-ripple-opacity: 1;
 
   svg {
     fill: var(--fill);
@@ -23,24 +27,16 @@
 // states
 //
 
-// disabled
-:host([icon-only][disabled]) {
-  --fill: #{$med-color-neutral-dark-10};
-}
-
-// activated
-:host(.ion-activated) {
-  --fill: #{$med-color-neutral-dark-40};
-}
-
-// focused
-:host(.ion-focused) {
-  --fill: #{$med-color-neutral-dark-40};
-}
-
-// hover
 @media (any-hover: hover) {
-  :host(:hover) {
-    --fill: #{$med-color-neutral-dark-40};
+  :host([icon-only]:hover) {
+    .button-native::before {
+      background: rgba(var(--background-hover), var(--background-hover-opacity));
+    }
+  }
+}
+
+:host([icon-only].ion-focused) {
+  .button-native::before {
+    background: rgba(var(--background-focused), var(--background-focused-opacity)); 
   }
 }
