--- a/core/src/components/button/med/med-button-secondary.scss
+++ b/core/src/components/button/med/med-button-secondary.scss
@@ -25,7 +25,7 @@
   --font-weight: #{$med-font-weight-semibold};
   --line-height: #{$med-line-height-compressed};
   --padding: #{$med-spacing-squish-base};
-  --transition: all 300ms ease-out;
+  --transition: background 300ms ease-out, color 300ms ease-out, border-color 300ms ease-out;
   --width: calc(100% - 4px);
 
   --button-ripple-color: #{$med-color-brand-primary-medium};
