add margin for inset accordion

--- a/core/src/components/accordion/test/a11y/index.html
+++ b/core/src/components/accordion/test/a11y/index.html
@@ -13,7 +13,7 @@
 
   <body>
     <ion-app>
-      <ion-content class="ion-padding">
+      <ion-content>
         <h1>Accordion Group - a11y</h1>
 
         <ion-accordion-group expand="inset">
