default item lines to full if not set

--- a/core/src/components/accordion/test/basic/index.html
+++ b/core/src/components/accordion/test/basic/index.html
@@ -36,7 +36,7 @@
           <div class="grid-item">
             <ion-accordion-group mode="ios" expand="inset">
               <ion-accordion value="attractions">
-                <ion-item lines="full" color="primary" slot="header" button detail="false">
+                <ion-item color="primary" slot="header" button detail="false">
                   <ion-icon slot="start" ios="film-outline" md="film"></ion-icon>
                   <ion-label> Attractions</ion-label>
                 </ion-item>
@@ -53,7 +53,7 @@
                 </ion-list>
               </ion-accordion>
               <ion-accordion value="dining">
-                <ion-item lines="full" color="warning" slot="header" button detail="false">
+                <ion-item color="warning" slot="header" button detail="false">
                   <ion-icon slot="start" name="pizza"></ion-icon>
                   <ion-label>Dining</ion-label>
                 </ion-item>
@@ -70,7 +70,7 @@
                 </ion-list>
               </ion-accordion>
               <ion-accordion value="games">
-                <ion-item lines="full" color="danger" slot="header" button detail="false">
+                <ion-item color="danger" slot="header" button detail="false">
                   <ion-icon slot="start" ios="game-controller-outline" md="game-controller"></ion-icon>
                   <ion-label>Games</ion-label>
                 </ion-item>
@@ -88,7 +88,7 @@
                 </ion-list>
               </ion-accordion>
               <ion-accordion value="exercise">
-                <ion-item lines="full" color="success" slot="header" button detail="false">
+                <ion-item color="success" slot="header" button detail="false">
                   <ion-icon slot="start" ios="bicycle-outline" md="bicycle"></ion-icon>
                   <ion-label>Exercise</ion-label>
                 </ion-item>
@@ -111,7 +111,7 @@
           <div class="grid-item">
             <ion-accordion-group mode="ios" expand="inset">
               <ion-accordion value="attractions">
-                <ion-item lines="full" slot="header" button detail="false">
+                <ion-item slot="header" button detail="false">
                   <ion-icon slot="start" ios="film-outline" md="film"></ion-icon>
                   <ion-label> Attractions</ion-label>
                 </ion-item>
@@ -128,7 +128,7 @@
                 </ion-list>
               </ion-accordion>
               <ion-accordion value="dining">
-                <ion-item lines="full" slot="header" button detail="false">
+                <ion-item slot="header" button detail="false">
                   <ion-icon slot="start" name="pizza"></ion-icon>
                   <ion-label>Dining</ion-label>
                 </ion-item>
@@ -145,7 +145,7 @@
                 </ion-list>
               </ion-accordion>
               <ion-accordion value="games">
-                <ion-item lines="full" slot="header" button detail="false">
+                <ion-item slot="header" button detail="false">
                   <ion-icon slot="start" ios="game-controller-outline" md="game-controller"></ion-icon>
                   <ion-label>Games</ion-label>
                 </ion-item>
@@ -163,7 +163,7 @@
                 </ion-list>
               </ion-accordion>
               <ion-accordion value="exercise">
-                <ion-item lines="full" slot="header" button detail="false">
+                <ion-item slot="header" button detail="false">
                   <ion-icon slot="start" ios="bicycle-outline" md="bicycle"></ion-icon>
                   <ion-label>Exercise</ion-label>
                 </ion-item>
@@ -186,7 +186,7 @@
           <div class="grid-item">
             <ion-accordion-group mode="md" expand="inset">
               <ion-accordion value="attractions">
-                <ion-item lines="full" color="primary" slot="header" button detail="false">
+                <ion-item color="primary" slot="header" button detail="false">
                   <ion-icon slot="start" ios="film-outline" md="film"></ion-icon>
                   <ion-label> Attractions</ion-label>
                 </ion-item>
@@ -203,7 +203,7 @@
                 </ion-list>
               </ion-accordion>
               <ion-accordion value="dining">
-                <ion-item lines="full" color="warning" slot="header" button detail="false">
+                <ion-item color="warning" slot="header" button detail="false">
                   <ion-icon slot="start" name="pizza"></ion-icon>
                   <ion-label>Dining</ion-label>
                 </ion-item>
@@ -220,7 +220,7 @@
                 </ion-list>
               </ion-accordion>
               <ion-accordion value="games">
-                <ion-item lines="full" color="danger" slot="header" button detail="false">
+                <ion-item color="danger" slot="header" button detail="false">
                   <ion-icon slot="start" ios="game-controller-outline" md="game-controller"></ion-icon>
                   <ion-label>Games</ion-label>
                 </ion-item>
@@ -238,7 +238,7 @@
                 </ion-list>
               </ion-accordion>
               <ion-accordion value="exercise">
-                <ion-item lines="full" color="success" slot="header" button detail="false">
+                <ion-item color="success" slot="header" button detail="false">
                   <ion-icon slot="start" ios="bicycle-outline" md="bicycle"></ion-icon>
                   <ion-label>Exercise</ion-label>
                 </ion-item>
@@ -261,7 +261,7 @@
           <div class="grid-item">
             <ion-accordion-group mode="md" expand="inset">
               <ion-accordion value="attractions">
-                <ion-item lines="full" slot="header" button detail="false">
+                <ion-item slot="header" button detail="false">
                   <ion-icon slot="start" ios="film-outline" md="film"></ion-icon>
                   <ion-label> Attractions</ion-label>
                 </ion-item>
@@ -278,7 +278,7 @@
                 </ion-list>
               </ion-accordion>
               <ion-accordion value="dining">
-                <ion-item lines="full" slot="header" button detail="false">
+                <ion-item slot="header" button detail="false">
                   <ion-icon slot="start" name="pizza"></ion-icon>
                   <ion-label>Dining</ion-label>
                 </ion-item>
@@ -295,7 +295,7 @@
                 </ion-list>
               </ion-accordion>
               <ion-accordion value="games">
-                <ion-item lines="full" slot="header" button detail="false">
+                <ion-item slot="header" button detail="false">
                   <ion-icon slot="start" ios="game-controller-outline" md="game-controller"></ion-icon>
                   <ion-label>Games</ion-label>
                 </ion-item>
@@ -313,7 +313,7 @@
                 </ion-list>
               </ion-accordion>
               <ion-accordion value="exercise">
-                <ion-item lines="full" slot="header" button detail="false">
+                <ion-item slot="header" button detail="false">
                   <ion-icon slot="start" ios="bicycle-outline" md="bicycle"></ion-icon>
                   <ion-label>Exercise</ion-label>
                 </ion-item>
@@ -337,7 +337,7 @@
           <div class="grid-item">
             <ion-accordion-group mode="ios">
               <ion-accordion value="attractions">
-                <ion-item lines="full" color="primary" slot="header" button detail="false">
+                <ion-item color="primary" slot="header" button detail="false">
                   <ion-icon slot="start" ios="film-outline" md="film"></ion-icon>
                   <ion-label> Attractions</ion-label>
                 </ion-item>
@@ -354,7 +354,7 @@
                 </ion-list>
               </ion-accordion>
               <ion-accordion value="dining">
-                <ion-item lines="full" color="warning" slot="header" button detail="false">
+                <ion-item color="warning" slot="header" button detail="false">
                   <ion-icon slot="start" name="pizza"></ion-icon>
                   <ion-label>Dining</ion-label>
                 </ion-item>
@@ -371,7 +371,7 @@
                 </ion-list>
               </ion-accordion>
               <ion-accordion value="games">
-                <ion-item lines="full" color="danger" slot="header" button detail="false">
+                <ion-item color="danger" slot="header" button detail="false">
                   <ion-icon slot="start" ios="game-controller-outline" md="game-controller"></ion-icon>
                   <ion-label>Games</ion-label>
                 </ion-item>
@@ -389,7 +389,7 @@
                 </ion-list>
               </ion-accordion>
               <ion-accordion value="exercise">
-                <ion-item lines="full" color="success" slot="header" button detail="false">
+                <ion-item color="success" slot="header" button detail="false">
                   <ion-icon slot="start" ios="bicycle-outline" md="bicycle"></ion-icon>
                   <ion-label>Exercise</ion-label>
                 </ion-item>
@@ -412,7 +412,7 @@
           <div class="grid-item">
             <ion-accordion-group mode="ios">
               <ion-accordion value="attractions">
-                <ion-item lines="full" slot="header" button detail="false">
+                <ion-item slot="header" button detail="false">
                   <ion-icon slot="start" ios="film-outline" md="film"></ion-icon>
                   <ion-label> Attractions</ion-label>
                 </ion-item>
@@ -429,7 +429,7 @@
                 </ion-list>
               </ion-accordion>
               <ion-accordion value="dining">
-                <ion-item lines="full" slot="header" button detail="false">
+                <ion-item slot="header" button detail="false">
                   <ion-icon slot="start" name="pizza"></ion-icon>
                   <ion-label>Dining</ion-label>
                 </ion-item>
@@ -446,7 +446,7 @@
                 </ion-list>
               </ion-accordion>
               <ion-accordion value="games">
-                <ion-item lines="full" slot="header" button detail="false">
+                <ion-item slot="header" button detail="false">
                   <ion-icon slot="start" ios="game-controller-outline" md="game-controller"></ion-icon>
                   <ion-label>Games</ion-label>
                 </ion-item>
@@ -464,7 +464,7 @@
                 </ion-list>
               </ion-accordion>
               <ion-accordion value="exercise">
-                <ion-item lines="full" slot="header" button detail="false">
+                <ion-item slot="header" button detail="false">
                   <ion-icon slot="start" ios="bicycle-outline" md="bicycle"></ion-icon>
                   <ion-label>Exercise</ion-label>
                 </ion-item>
@@ -487,7 +487,7 @@
           <div class="grid-item">
             <ion-accordion-group mode="md">
               <ion-accordion value="attractions">
-                <ion-item lines="full" color="primary" slot="header" button detail="false">
+                <ion-item color="primary" slot="header" button detail="false">
                   <ion-icon slot="start" ios="film-outline" md="film"></ion-icon>
                   <ion-label> Attractions</ion-label>
                 </ion-item>
@@ -504,7 +504,7 @@
                 </ion-list>
               </ion-accordion>
               <ion-accordion value="dining">
-                <ion-item lines="full" color="warning" slot="header" button detail="false">
+                <ion-item color="warning" slot="header" button detail="false">
                   <ion-icon slot="start" name="pizza"></ion-icon>
                   <ion-label>Dining</ion-label>
                 </ion-item>
@@ -521,7 +521,7 @@
                 </ion-list>
               </ion-accordion>
               <ion-accordion value="games">
-                <ion-item lines="full" color="danger" slot="header" button detail="false">
+                <ion-item color="danger" slot="header" button detail="false">
                   <ion-icon slot="start" ios="game-controller-outline" md="game-controller"></ion-icon>
                   <ion-label>Games</ion-label>
                 </ion-item>
@@ -539,7 +539,7 @@
                 </ion-list>
               </ion-accordion>
               <ion-accordion value="exercise">
-                <ion-item lines="full" color="success" slot="header" button detail="false">
+                <ion-item color="success" slot="header" button detail="false">
                   <ion-icon slot="start" ios="bicycle-outline" md="bicycle"></ion-icon>
                   <ion-label>Exercise</ion-label>
                 </ion-item>
@@ -562,7 +562,7 @@
           <div class="grid-item">
             <ion-accordion-group mode="md">
               <ion-accordion value="attractions">
-                <ion-item lines="full" slot="header" button detail="false">
+                <ion-item slot="header" button detail="false">
                   <ion-icon slot="start" ios="film-outline" md="film"></ion-icon>
                   <ion-label> Attractions</ion-label>
                 </ion-item>
@@ -579,7 +579,7 @@
                 </ion-list>
               </ion-accordion>
               <ion-accordion value="dining">
-                <ion-item lines="full" slot="header" button detail="false">
+                <ion-item slot="header" button detail="false">
                   <ion-icon slot="start" name="pizza"></ion-icon>
                   <ion-label>Dining</ion-label>
                 </ion-item>
@@ -596,7 +596,7 @@
                 </ion-list>
               </ion-accordion>
               <ion-accordion value="games">
-                <ion-item lines="full" slot="header" button detail="false">
+                <ion-item slot="header" button detail="false">
                   <ion-icon slot="start" ios="game-controller-outline" md="game-controller"></ion-icon>
                   <ion-label>Games</ion-label>
                 </ion-item>
@@ -614,7 +614,7 @@
                 </ion-list>
               </ion-accordion>
               <ion-accordion value="exercise">
-                <ion-item lines="full" slot="header" button detail="false">
+                <ion-item slot="header" button detail="false">
                   <ion-icon slot="start" ios="bicycle-outline" md="bicycle"></ion-icon>
                   <ion-label>Exercise</ion-label>
                 </ion-item>
@@ -638,7 +638,7 @@
           <div class="grid-item">
             <ion-accordion-group expand="inset" mode="md" multiple="true">
               <ion-accordion value="attractions">
-                <ion-item lines="full" slot="header" button detail="false">
+                <ion-item slot="header" button detail="false">
                   <ion-icon slot="start" ios="film-outline" md="film"></ion-icon>
                   <ion-label> Attractions</ion-label>
                 </ion-item>
@@ -655,7 +655,7 @@
                 </ion-list>
               </ion-accordion>
               <ion-accordion value="dining">
-                <ion-item lines="full" slot="header" button detail="false">
+                <ion-item slot="header" button detail="false">
                   <ion-icon slot="start" name="pizza"></ion-icon>
                   <ion-label>Dining</ion-label>
                 </ion-item>
@@ -672,7 +672,7 @@
                 </ion-list>
               </ion-accordion>
               <ion-accordion value="games">
-                <ion-item lines="full" slot="header" button detail="false">
+                <ion-item slot="header" button detail="false">
                   <ion-icon slot="start" ios="game-controller-outline" md="game-controller"></ion-icon>
                   <ion-label>Games</ion-label>
                 </ion-item>
@@ -690,7 +690,7 @@
                 </ion-list>
               </ion-accordion>
               <ion-accordion value="exercise">
-                <ion-item lines="full" slot="header" button detail="false">
+                <ion-item slot="header" button detail="false">
                   <ion-icon slot="start" ios="bicycle-outline" md="bicycle"></ion-icon>
                   <ion-label>Exercise</ion-label>
                 </ion-item>
