--- a/core/src/components/button/med/med-button-tertiary.scss
+++ b/core/src/components/button/med/med-button-tertiary.scss
@@ -18,7 +18,7 @@
   --font-size: #{$med-font-size-xxs};
   --font-weight: #{$med-font-weight-semibold};
   --line-height: #{$med-line-height-compressed};
-  --padding: #{$med-spacing-squish-base};
+  --padding: #{$med-spacing-inset-xs};
   --transition: background 300ms ease-out, color 300ms ease-out, border-color 300ms ease-out;
   --height: 32px;
 
