test(accordion): standalone test which checks the readonly, custom css

--- a/core/src/components/accordion/test/basic/index.html
+++ b/core/src/components/accordion/test/basic/index.html
@@ -22,16 +22,16 @@
     <ion-app>
       <ion-header translucent="true">
         <ion-toolbar>
-          <ion-title>Topics</ion-title>
+          <ion-title>Accordion - Basic</ion-title>
         </ion-toolbar>
       </ion-header>
       <ion-content fullscreen="true" color="light">
-        <h1>Accordion Group - Basic</h1>
         <ion-header collapse="condense">
           <ion-toolbar color="light">
-            <ion-title size="large">Topics</ion-title>
+            <ion-title size="large">Accordion - Basic</ion-title>
           </ion-toolbar>
         </ion-header>
+
         <div class="grid ion-padding">
           <div class="grid-item">
             <ion-accordion-group mode="ios" expand="inset">
