--- a/core/src/components/accordion/test/basic/index.html
+++ b/core/src/components/accordion/test/basic/index.html
@@ -20,18 +20,8 @@
   </head>
   <body>
     <ion-app>
-      <ion-header translucent="true">
-        <ion-toolbar>
-          <ion-title>Accordion - Basic</ion-title>
-        </ion-toolbar>
-      </ion-header>
       <ion-content fullscreen="true" color="light">
-        <ion-header collapse="condense">
-          <ion-toolbar color="light">
-            <ion-title size="large">Accordion - Basic</ion-title>
-          </ion-toolbar>
-        </ion-header>
-
+        <h1>Accordion - Basic</h1>
         <div class="grid ion-padding">
           <div class="grid-item">
             <ion-accordion-group mode="ios" expand="inset">
