--- a/core/src/components/accordion/test/standalone/index.html
+++ b/core/src/components/accordion/test/standalone/index.html
@@ -11,78 +11,82 @@
     <script type="module" src="../../../../../dist/ionic/ionic.esm.js"></script>
   </head>
   <body>
-    <div class="grid ion-padding">
-      <div class="grid-item">
-        <h2>Default Accordion</h2>
+    <main>
+      <h1 class="ion-padding">Accordion</h1>
 
-        <ion-accordion-group>
-          <ion-accordion>
-            <button class="custom-accordion-button" slot="header">
-              Attractions
-            </button>
-            <div class="custom-accordion-content" slot="content">
-              Some content
-            </div>
-          </ion-accordion>
-          <ion-accordion>
-            <button class="custom-accordion-button" slot="header">
-              Second one
-            </button>
-            <div class="custom-accordion-content" slot="content">
-              Some content
-            </div>
-          </ion-accordion>
-        </ion-accordion-group>
+      <div class="grid ion-padding">
+        <div class="grid-item">
+          <h2>Default Accordion</h2>
+
+          <ion-accordion-group>
+            <ion-accordion>
+              <button class="custom-accordion-button" slot="header">
+                Attractions
+              </button>
+              <div class="custom-accordion-content" slot="content">
+                Some content
+              </div>
+            </ion-accordion>
+            <ion-accordion>
+              <button class="custom-accordion-button" slot="header">
+                Second one
+              </button>
+              <div class="custom-accordion-content" slot="content">
+                Some content
+              </div>
+            </ion-accordion>
+          </ion-accordion-group>
+        </div>
+
+        <div class="grid-item">
+          <h2>Readonly Accordion (1st)</h2>
+
+          <ion-accordion-group value="expanded">
+            <ion-accordion readonly value="expanded">
+              <button class="custom-accordion-button" slot="header">
+                Readonly - expanded
+              </button>
+              <div class="custom-accordion-content" slot="content">
+                <input id="checkme-1" type="checkbox"></input>
+                <label for="checkme-1">Check me!</label>
+              </div>
+            </ion-accordion>
+            <ion-accordion value="collapsed">
+              <button class="custom-accordion-button" slot="header">
+                Collapsed
+              </button>
+              <div class="custom-accordion-content" slot="content">
+                <input id="checkme-2" type="checkbox"></input>
+                <label for="checkme-2">Check me!</label>
+              </div>
+            </ion-accordion>
+          </ion-accordion-group>
+        </div>
+
+        <div class="grid-item">
+          <h2>Custom Accordion Colors</h2>
+
+          <ion-accordion-group expand="inset" class="custom-colors">
+            <ion-accordion>
+              <button class="custom-accordion-button" slot="header">
+                Danger
+              </button>
+              <div class="custom-accordion-content" slot="content">
+                Some content
+              </div>
+            </ion-accordion>
+            <ion-accordion>
+              <button class="custom-accordion-button" slot="header">
+                Primary
+              </button>
+              <div class="custom-accordion-content" slot="content">
+                Some content
+              </div>
+            </ion-accordion>
+          </ion-accordion-group>
+        </div>
       </div>
-
-      <div class="grid-item">
-        <h2>Readonly Accordion (1st)</h2>
-
-        <ion-accordion-group value="expanded">
-          <ion-accordion readonly value="expanded">
-            <button class="custom-accordion-button" slot="header">
-              Readonly - expanded
-            </button>
-            <div class="custom-accordion-content" slot="content">
-              <input id="checkme-1" type="checkbox"></input>
-              <label for="checkme-1">Check me!</label>
-            </div>
-          </ion-accordion>
-          <ion-accordion value="collapsed">
-            <button class="custom-accordion-button" slot="header">
-              Collapsed
-            </button>
-            <div class="custom-accordion-content" slot="content">
-              <input id="checkme-2" type="checkbox"></input>
-              <label for="checkme-2">Check me!</label>
-            </div>
-          </ion-accordion>
-        </ion-accordion-group>
-      </div>
-
-      <div class="grid-item">
-        <h2>Custom Accordion Colors</h2>
-
-        <ion-accordion-group expand="inset" class="custom-colors">
-          <ion-accordion>
-            <button class="custom-accordion-button" slot="header">
-              Danger
-            </button>
-            <div class="custom-accordion-content" slot="content">
-              Some content
-            </div>
-          </ion-accordion>
-          <ion-accordion>
-            <button class="custom-accordion-button" slot="header">
-              Primary
-            </button>
-            <div class="custom-accordion-content" slot="content">
-              Some content
-            </div>
-          </ion-accordion>
-        </ion-accordion-group>
-      </div>
-    </div>
+    </main>
   </body>
 
   <style>
