fix(segment, segment-button): change aria attributes for segment and segment-button

--- a/core/src/components/segment/test/basic/index.html
+++ b/core/src/components/segment/test/basic/index.html
@@ -23,7 +23,7 @@
 
       <ion-toolbar>
         <ion-segment class="event-tester" value="Free">
-          <ion-segment-button value="Paid">
+          <ion-segment-button value="Paid" aria-controls="Free">
             PaidPaidPaid
           </ion-segment-button>
           <ion-segment-button value="Free">
