Add tests, screen reader doc

--- a/core/src/components/segment/test/a11y/index.html
+++ b/core/src/components/segment/test/a11y/index.html
@@ -15,17 +15,14 @@
   <body>
     <main>
       <h1>Segment</h1>
-      <ion-segment color="dark" value="reading-list">
+      <ion-segment aria-label="Tab Options" color="dark" value="reading-list">
         <ion-segment-button value="bookmarks">
-          <ion-icon name="book"></ion-icon>
           <ion-label>Bookmarks</ion-label>
         </ion-segment-button>
         <ion-segment-button value="reading-list">
-          <ion-icon name="glasses"></ion-icon>
           <ion-label>Reading List</ion-label>
         </ion-segment-button>
         <ion-segment-button value="shared-links">
-          <ion-icon name="at"></ion-icon>
           <ion-label>Shared Links</ion-label>
         </ion-segment-button>
       </ion-segment>
