--- a/core/src/components/toggle/test/basic/index.html
+++ b/core/src/components/toggle/test/basic/index.html
@@ -77,8 +77,8 @@
         </ion-item>
 
         <ion-item>
-          <ion-label>Stop Immediate Event Propogation</ion-label>
-          <ion-toggle slot="start" checked id="eventPropogation"></ion-toggle>
+          <ion-label>Stop Immediate Event Propagation</ion-label>
+          <ion-toggle slot="start" checked id="eventPropagation"></ion-toggle>
         </ion-item>
 
       </ion-list>
@@ -127,7 +127,7 @@
         el[prop] = isTrue;
       }
 
-      document.getElementById('eventPropogation').addEventListener('click', (evt) => {
+      document.getElementById('eventPropagation').addEventListener('click', (evt) => {
         evt.stopImmediatePropagation();
         console.log('clicked');
       });
