--- a/core/src/css/core.scss
+++ b/core/src/css/core.scss
@@ -32,11 +32,13 @@ body.backdrop-no-scroll {
 
 // Modal - Card Style
 // --------------------------------------------------
-// The card style does not reach all the way to
-// the top of the screen, so there does not need
-// to be any safe area padding added
-html.ios ion-modal.modal-card .ion-page > ion-header > ion-toolbar:first-of-type {
-  padding-top: 0px;
+// Toolbars in modals on native iOS have 
+// additional padding than in non-modal contexts
+html.ios ion-modal .ion-page > ion-header > ion-toolbar {
+  padding-right: 8px;
+  padding-left: 8px;
+  padding-top: 4px;
+  padding-bottom: 4px;
 }
 
 // .ion-page needs to explicitly inherit
