--- a/core/src/components/modal/test/basic/index.html
+++ b/core/src/components/modal/test/basic/index.html
@@ -55,17 +55,7 @@
       element.innerHTML = `
       <ion-header>
         <ion-toolbar>
-          <ion-buttons slot="start">
-            <ion-button color="danger">
-              Cancel
-            </ion-button>
-          </ion-buttons>
-          <ion-buttons slot="end">
-            <ion-button>
-              Add
-            </ion-button>
-          </ion-buttons>
-          <ion-title>New Event</ion-title>
+          <ion-title>Super Modal</ion-title>
         </ion-toolbar>
       </ion-header>
       <ion-content>
